# Smart_Emoticon_Generation

./: .cursorrules  .gitignore  Cursor.md  Function.md  Makefile  README.md  TODO.md  docker-compose.yml
SQL/: migrate_meme_assets_usage_scenario.sql  migrate_users_account_password.sql  schema.sql  seed_admin_demo.sql
admin-web/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
ai-kore/: .env.example  main.py  pyproject.toml
ai-kore/app/: main.py
ai-kore/app/api/: router.py  search.py
ai-kore/app/api/v1/: crawl.py  health.py  image_gen.py  vector.py
ai-kore/app/client/: __init__.py  smart_meter_client.py
ai-kore/app/core/: __init__.py  config.py  logger.py  style_tag_defaults.py
ai-kore/app/schemas/: __init__.py  crawl_schema.py  image_gen_schema.py  vector_schema.py
ai-kore/app/services/: crawl_service.py
ai-kore/crawler/: __init__.py  spider.py
ai-kore/models/: __init__.py  clip.py  embedding.py
ai-kore/ocr/: __init__.py  engine.py  ocrapi_client.py  paddle_ocr_legacy.py
ai-kore/ocr_api/: __init__.py  baidu_general_basic.py
ai-kore/pipeline/: __init__.py  image_pipeline.py  vision_metadata.py
ai-kore/scripts/: run_image_pipeline.py  test_ocr.py  test_vision_metadata.py
ai-kore/storage/: __init__.py  oss_client.py
ai-kore/vector/: __init__.py  client.py  collection.py  search.py
docs/: 2022015655_刘杰_软件工程_基于微信小程序的表情包智能生成系统的设计与实现.docx  ADMIN_CRUD_VERIFICATION.md  ANALYSIS_IMAGE_GENERATE_REFERENCE_IMAGE.md  CHECK_REFERENCE_IMAGE_UPLOAD.md  FIX_REFERENCE_IMAGE_UPLOAD_FAIL.md  MID_TERM_DEFENSE_FAQ.md  (+21 more)
(+222 files in other folders)
